5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1668_1391.log
== TEST (2019-04-15 19:08:30) 
-- CODE:

consumo = int(input())

if (consumo <= 150):
	valor = ((0.60 * consumo) + 5)
-- ERROR:
File "XXXX", line 1
    float ( int ( escreva valor de "s" ) )
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:10) 
-- CODE:

consumo = int(input())

if (consumo <= 150):
	valor = ((0.60 * consumo) + 5)
else:
	valor = ((0.75 * consumo) + 5)
	
print(valor)
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:10:23) 
-- CODE:

consumo = int(input())

if (consumo <= 150):
	valor = ((0.60 * consumo) + 5)
else:
	valor = ((0.75 * consumo) + 5)
	
print(valor)
-- EXECUTION TIME:
0.135172
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
192.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
380.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:34) 
-- CODE:

consumo = int(input())

if (consumo <= 150):
	valor = ((0.60 * consumo) + 5)
else:
	valor = ((0.75 * consumo) + 5)
	
print(valor)
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:38) 
-- CODE:

consumo = int(input())

if (consumo <= 150):
	valor = ((0.60 * consumo) + 5)
else:
	valor = ((0.75 * consumo) + 16)
	
print(valor)
-- OUTPUT:
90.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:12:46) 
-- CODE:

consumo = int(input())

if (consumo <= 150):
	valor = ((0.60 * consumo) + 5)
else:
	valor = ((0.75 * consumo) + 16)
	
print(valor)
-- EXECUTION TIME:
0.286404
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
90.2
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
203.5
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
391.75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
